Fixed calendar UI on mobile

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -486,6 +486,19 @@ input[readonly], textarea[readonly] {
     .calendar-content {
         margin-top: 2em;
     }
-
+    .calendar-content table {
+        border-collapse: collapse;
+        height: 20vh;
+        width: 20vw;
+    }
+    .header h1{
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+    .calendar-content table th, td {
+        padding: .3em .3em;
+        text-align: center;
+        margin: 1em;
+    }
 
 }
